--- a/PowerPoint Remote/wwwroot/index.html
+++ b/PowerPoint Remote/wwwroot/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>PowerPoint Remote Control</title>
 	<link href="style.css" rel="stylesheet"/>
+	<link rel="icon" href="pptr.ico"/>
 </head>
 <body>
 	<script src="swiped-events.min.js"></script>
